src/css/index.css
/* ... */
.forecast-grid {
  background: hsla(0, 0%, 0%, 0.6);
  color: #f9f9f9;
}
.forecast--good0::before {
  background-image: url("/img/good0.jpg");
}
.forecast--good1::before {
  background-image: url("/img/good1.jpg");
}
.forecast--good2::before {
  background-image: url("/img/good2.jpg");
}
.forecast--good .visible--good {
  display: block;
}
.forecast--good .forecast-grid {
  background-color: hsla(143, 66%, 22%, 0.5);
}
.forecast--good .forecast__next,
.forecast--good .forecast__prev,
.forecast--good h2 {
  background: hsla(143, 66%, 22%, 1);
  color: #f9f9f9;
}
.forecast--unhealthy0::before {
  background-image: url("/img/unhealthy0.jpg");
}
.forecast--unhealthy1::before {
  background-image: url("/img/unhealthy1.jpg");
}
.forecast--unhealthy2::before {
  background-image: url("/img/unhealthy2.jpg");
}
.forecast--unhealthy .visible--unhealthy {
  display: block;
}
.forecast--unhealthy .forecast-grid {
  background: hsla(0, 72%, 36%, 0.5);
}
.forecast--unhealthy .forecast__next,
.forecast--unhealthy .forecast__prev,
.forecast--unhealthy h2 {
  background: hsla(0, 72%, 36%, 1);
  color: #f9f9f9;
}
.forecast--moderate0::before {
  background-image: url("/img/moderate0.jpg");
}
.forecast--moderate1::before {
  background-image: url("/img/moderate1.jpg");
}
.forecast--moderate2::before {
  background-image: url("/img/moderate2.jpg");
}
.forecast--moderate .visible--moderate {
  display: block;
}
.forecast--moderate .forecast-grid {
  background: hsla(50, 100%, 50%, 0.6);
  color: #331b01;
  text-shadow: 2px 2px 5px hsla(50, 100%, 85%, 0.6),
    -2px -2px 5px hsla(50, 100%, 85%, 0.6),
    2px -2px 5px hsla(50, 100%, 85%, 0.6), -2px 2px 5px hsla(50, 100%, 85%, 0.6);
}
.forecast--moderate .forecast__next,
.forecast--moderate .forecast__prev,
.forecast--moderate h2 {
  background: hsl(50, 100%, 50%);
}
.forecast--moderate .icon-right,
.forecast--sensitive .icon-right {
  content: url(https://icons.simplesvg.com/fa-chevron-right.svg?color=%23331b01&height=24&inline=true);
}
.forecast--moderate .icon-left,
.forecast--sensitive .icon-left {
  content: url(https://icons.simplesvg.com/fa-chevron-left.svg?color=%23331b01&height=24&inline=true);
}
.forecast--sensitive0::before {
  background-image: url("/img/sensitive0.jpg");
}
.forecast--sensitive1::before {
  background-image: url("/img/sensitive1.jpg");
}
.forecast--sensitive2::before {
  background-image: url("/img/sensitive2.jpg");
}
.forecast--sensitive .visible--sensitive {
  display: block;
}
.forecast--sensitive .forecast-grid {
  background: hsla(26, 100%, 61%, .55);
  text-shadow: 2px 2px 5px hsla(26, 100%, 81%, 0.6),
    -2px -2px 5px hsla(26, 100%, 81%, 0.6),
    2px -2px 5px hsla(26, 100%, 81%, 0.6), -2px 2px 5px hsla(26, 100%, 81%, 0.6);
  color: #331b01;
}
.forecast--sensitive .forecast__next,
.forecast--sensitive .forecast__prev,
.forecast--sensitive h2 {
  background: hsl(26, 100%, 61%);
}
.forecast--unavailable::before {
  background: #888;
}
.forecast--unavailable .list-group-item {
  display: block;
}
footer {
  display: none;
}
@media (min-width: 641px) {
  body {
    height: auto;
    min-height: 100%;
    overflow-y: scroll;
  }
  header {
    flex: 0 1 33vh;
  }
  header div {
    justify-content: flex-start;
    background: linear-gradient(to right, #f9f9f9 50%, transparent 75%);
  }
  header section {
    flex: 0;
  }
  .content {
    justify-content: space-around;
    align-items: stretch;
    margin-bottom: 4em;
    flex: 0;
  }
  .drawer {
    position: static;
    min-width: -webkit-fit-content;
    min-width: -moz-fit-content;
    min-width: fit-content;
    opacity: 1;
    transform: scale(1);
    background: transparent !important;
    z-index: 0;
    justify-content: center;
    padding: 0 32px;
  }
  .drawer__drawer {
    padding: 0;
  }
  .drawer-list {
    height: 23.25rem;
  }
  .drawer-list-item {
    background: hsla(0, 0%, 0%, 0.6);
  }
  .drawer footer,
  .demo-menu,
  .drawer__close-btn,
  .mobile-only {
    display: none;
  }
  main {
    width: auto;
    position: relative;
    flex-direction: column;
    display: flex;
    padding-right: 32px;
    overflow: hidden;
  }
  .forecast-grid {
    border-left: 5px solid white;
    border-right: 5px solid white;
    box-shadow: 1px 1px 8px 0 hsla(0, 0%, 0%, 0.66);
    flex: 1 0 calc(16em + 40px);
  }
  .forecast-grid small {
    font-size: 1rem;
  }
  h1 {
    font-size: 2.25em;
  }
  .wide-col {
    flex: 0 1 394px;
  }
  .forecast-details__link {
    display: none;
  }
  .forecast-grid .forecast-details__link {
    display: inline-block;
    margin: 0 auto;
    width: -moz-fit-content;
    width: -webkit-fit-content;
    width: fit-content;
  }
  .forecast-details,
  .forecast-details__panel {
    margin: 0;
    z-index: 3;
  }
  .forecast-details-panel,
  .content-panel {
    position: static;
  }
  .forecast-details-panel,
  .card {
    box-shadow: 1px 1px 8px 0 hsla(0, 0%, 0%, 0.85);
  }
  .forecast-details__panel--active > .forecast-details-panel,
  .content-panel--active {
    min-width: 0;
    min-height: calc(16em + 40px);
    max-height: fit-content;
    margin-top: calc(-16em - 40px);
    margin-bottom: 3em;
  }
  footer {
    margin-top: auto;
    background: hsla(0, 0%, 0%, 0.66);
    color: #f9f9f9;
    text-shadow: 1px 1px 8px hsla(0, 0%, 0%, 0.85);
    display: block;
  }
  footer div {
    display: flex;
    justify-content: space-around;
  }
  .adjust-col {
    padding: 0 6vw;
    width: 100%;
  }
  .wide-col {
    padding: 0 10px;
  }
}
@media (min-width: 769px) {
  .wide-col {
    flex: 0 1 480px;
  }
}
@media (min-width: 1200px) {
  .content,
  footer > div {
    width: 1200px;
    margin-left: auto;
    margin-right: auto;
  }
  .forecast-grid__content,
  .wide-col {
    flex: 0 1 80ch;
  }
  main {
    width: 80ch;
  }
}

